Ports code back to Java 19.