@@ -50,7 +50,7 @@
           <artifactId>maven-surefire-plugin</artifactId>
           <version>3.0.0-M5</version>
           <configuration>
-            <argLine>-Xmx16g --enable-preview</argLine>
+            <argLine>-Xmx16g</argLine>
           </configuration>
         </plugin>
       </plugins>
@@ -129,7 +129,7 @@
           </reportSet>
         </reportSets>
         <configuration>
-          <additionalOptions>-source 19 --enable-preview -Xdoclint:all</additionalOptions>
+          <additionalOptions>-source 19 -Xdoclint:all</additionalOptions>
         </configuration>
       </plugin>
     </plugins>
